created silly cia

--- a/week3/FSW-100 Assignments/Silly CIA, Part II CSS.html
+++ b/week3/FSW-100 Assignments/Silly CIA, Part II CSS.html
@@ -3,6 +3,7 @@
     <head>
 
         <title>CIA Realizes It's Been Using Black Highlighters All These Years</title>
+        <link rel="stylesheet" href=./style.css/>
     </head>
     <body>
         <div>
