--- a/week4/Assignments/grid.html
+++ b/week4/Assignments/grid.html
@@ -25,7 +25,7 @@ p {
     border: 10px;
     padding: 50px;
     margin: 5px;
-    display: inline-block;
+    display:inline-block
     
 }
 h2 {
@@ -56,7 +56,9 @@ h3 {
         
         <div></div>
         <h1></h1><h1></h1><h1></h1><h1></h1>
+        <br>
         <p></p><p></p>
+        <br>
         <h2></h2><h3></h3>
 
     </body>
